fixed overflows

--- a/src/components/Sidebar/Markers/styles.module.scss
+++ b/src/components/Sidebar/Markers/styles.module.scss
@@ -1,5 +1,33 @@
+.container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .markers {
+    flex: 1 1 auto;
+    width: 100%;
+
     display: flex;
     flex-direction: column;
     row-gap: 12px;
+
+    padding: 10px;
+
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.newMarker {
+    margin: 0 auto;
+    border: 0;
+    background-color: var(--primary-color);
+    padding: 5px 10px;
+    border-radius: 6px;
+    color: white;
+    font-weight: 700;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
