--- a/src/components/Sidebar/styles.module.scss
+++ b/src/components/Sidebar/styles.module.scss
@@ -1,5 +1,6 @@
 .headers {
     display: inline-flex;
+    flex: 1 0 auto;
     width: 100%;
 
     >button {
@@ -21,4 +22,17 @@
         cursor: pointer;
         transition: background-color 0.1s ease-out;
     }
+
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+
+    height: 100vh;
+}
+
+.content {
+    flex: 1 1 auto;
+    overflow: hidden;
 }
